--- a/portfolio/src/components/NavBar/styles.css
+++ b/portfolio/src/components/NavBar/styles.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 
 .navbar-container {
   width: 100%;
-  background-color: #7b4ae2;
+  background-color: #1a122cb7;
+  border-radius: 16px;
   height: 64px;
   display: flex;
   justify-content: space-between;
@@ -24,7 +25,8 @@
   cursor: pointer;
   padding: 0 5px;
   margin: 10px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
   color: #ffff;
   transition: all ease-in 0.3s;
 }
