--- a/portfolio/src/components/NavBar/styles.css
+++ b/portfolio/src/components/NavBar/styles.css
@@ -2,7 +2,7 @@
 
 .navbar-container {
   width: 100%;
-  background-color: #1a122cb7;
+  background-color: #3d2869b7;
   border-radius: 16px;
   height: 64px;
   display: flex;
@@ -32,5 +32,5 @@
 }
 
 .navbar-list a:hover {
-  color: #ae9bd8;
+  color: #A855f7;
 }
