--- a/portfolio/src/pages/Home/styles.css
+++ b/portfolio/src/pages/Home/styles.css
@@ -1,55 +1,180 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 
 .container-home {
-  background-color: brown;
   height: 100vh;
   padding: 10px 10px;
   margin: 10px;
-}
-.container-title {
-  position: absolute;
-  left: 100px;
-  top: 293px;
-  background-color: rgb(33, 34, 34);
-  height: 50%;
-  width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-.container-title h1 {
+.container-left,
+.container-right {
+  flex-basis: 50%; /* cada seção ocupa 50% da largura do container */
+  box-sizing: border-box; /* inclui o padding na largura do elemento */
+}
+.container-greeting {
+  margin-bottom: 40px;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  color: #a855f7;
+  display: inline-block;
+  animation-name: transition;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes transition {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.container-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 50%;
+  width: 600px;
+  padding: 25px;
+}
+.container-left h1 {
   color: #ffff;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
-  font-size: 40px;
-  animation: moveInRight 0.5s ease-in-out forwards;
+  font-size: 50px;
+  animation: moveInRight 1s ease-in-out forwards;
 }
 /*animation*/
 @keyframes moveInRight {
   from {
-    transform: translateX(-300px);
+    transform: translateX(-500px);
+    opacity: 0;
   }
   to {
     transform: translateX(0px);
+    opacity: 1;
   }
 }
-
-.container-title p {
+.container-left h2 {
+  color: #ffff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 23px;
+  overflow: hidden; /* esconde as letras que ainda não foram exibidas */
+  white-space: nowrap; /* impede que a palavra quebre em várias linhas */
+  animation: typing 2s steps(11);
+}
+@keyframes typing {
+  from {
+    width: 0%; /* começa sem largura (sem letras visíveis) */
+  }
+  to {
+    width: 40%; /* termina com largura total (todas as letras visíveis) */
+  }
+}
+.container-left p {
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 23px;
   display: flex;
   align-items: center;
   text-align: justify;
   color: rgba(255, 255, 255, 0.5);
-  animation: moveInRight_P 0.9s ease-in-out forwards;
+  animation: moveInRight 1s ease-in-out forwards;
 }
-
-@keyframes moveInRight_P {
+.social {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  animation: moveInTop 2s ease-in-out forwards;
+}
+.social a {
+  color: #999;
+  margin-left: 30px;
+  cursor: pointer;
+  transition: all ease 0.3s;
+}
+.social a:hover {
+  color: #a855f7;
+}
+@keyframes moveInTop {
   from {
-    transform: translateX(500px);
+    transform: translateY(300px);
   }
   to {
     transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+.container-right {
+  height: 60%;
+  width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  animation: moveInLeft 1s ease-in-out forwards;
+}
+/*animation*/
+@keyframes moveInLeft {
+  from {
+    transform: translateX(500px);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+
+.container-right img {
+  width: auto !important;
+  height: auto;
+  border-radius: 50%;
+}
+.container-right a {
+  position: absolute;
+  margin-top: 300px;
+  margin-right: 500px;
+  border: 1px solid #a855f7;
+  border-radius: 10px;
+  text-align: center;
+  padding: 10px;
+  font-family: "Poppins", sans-serif;
+  color: #a855f7;
+  transition: all ease-in-out 0.3s;
+}
+.container-right a:hover {
+  background-color: #a855f7;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .container-left,
+  .container-right {
+    flex-basis: 100%; /* cada seção ocupa 100% da largura do container em dispositivos menores */
+    margin-top: 10px;
+    margin-left: 0;
+    margin-right: 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
