--- a/portfolio/src/components/NavBar/styles.css
+++ b/portfolio/src/components/NavBar/styles.css
@@ -2,8 +2,7 @@
 
 .navbar-container {
   width: 100%;
-  background-color: #3d2869b7;
-  border-radius: 16px;
+  background-color: #331e60;
   height: 64px;
   display: flex;
   justify-content: space-between;
@@ -26,11 +25,28 @@
   padding: 0 5px;
   margin: 10px;
   font-family: "Poppins", sans-serif;
-  font-weight: 200;
+  font-weight: 400;
   color: #ffff;
   transition: all ease-in 0.3s;
 }
 
 .navbar-list a:hover {
-  color: #A855f7;
+  color: #7142cb;
+}
+
+@media (max-width: 768px) {
+  .navbar-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+  .navbar-list a {
+    font-size: 12px;
+    margin: 0;
+  }
+  .navbar-container .logo {
+    margin: 0;
+  }
 }
