--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -8,4 +11,15 @@ body {
   background: #090e16;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
+  
 }
+
+@media (max-width: 767px) {
+  body{
+    overflow: scroll;
+  }
+}
+
+
+
