--- a/portfolio/src/pages/About/styles.css
+++ b/portfolio/src/pages/About/styles.css
@@ -70,7 +70,7 @@
   width: 100%;
   padding: 7.5px 20px;
   font-weight: bold;
-  cursor: pointer;
+  cursor: default;
   align-items: center;
   margin-right: 10px;
   margin-left: 10px;
