--- a/portfolio/src/pages/Projects/styles.css
+++ b/portfolio/src/pages/Projects/styles.css
@@ -1,6 +1,8 @@
 .container-projeto {
   height: 100vh;
   width: 100%;
+  position: relative;
+  color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,12 +10,9 @@
   font-family: "Roboto", sans-serif;
 }
 
-.container-projeto img {
-  width: 20%;
-}
-.container-projeto h1 {
-  color: #fff;
-}
-.container-projeto h2{
-    color: #999;
+.container-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
