--- a/portfolio/src/components/Card/styles.css
+++ b/portfolio/src/components/Card/styles.css
@@ -1,15 +1,3 @@
-.card-container {
-  position: relative /* para permitir a posição absoluta dos elementos filhos.*/;
-  width: 600px;
-  height: 500px;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  animation-name: fade-in;
-  animation-duration: 3s;
-  animation-iteration-count: 1;
-}
-
 @keyframes fade-in {
   from {
     opacity: 0;
@@ -19,89 +7,139 @@
   }
 }
 
-.front {
-  position: absolute;
-  width: 548px;
+.flip-card {
+  width: 600px;
+  height: 306.5px;
+  perspective: 1000px;
   cursor: pointer;
-  height: 306.5px;
-  transform-style: preserve-3d;
-  transition: all 0.5s ease-in-out;
-  display: flex;
-  margin-top: 50px;
-  align-items: center;
-  justify-content: center;
+  animation-name: fade-in;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  margin: 10px;
 }
 
-.back {
-  position: absolute;
-  width: 548px;
-  cursor: pointer;
-  height: 306.5px;
-  transform-style: preserve-3d;
-  transition: all 0.5s ease-in-out;
-  display: flex;
-  margin-top: 50px;
-  align-items: center;
-  justify-content: center;
-}
-
-.card-front {
-  position: absolute;
-  width: 548px;
-  height: 306.5px;
-  backface-visibility: hidden
-    /*para ocultar a face traseira do cartão durante a rotação.*/;
-}
-
-.card-back {
-  position: absolute;
-  width: 548px;
-  height: 306.5px;
-  border: 2px solid #7142cb;
-  border-radius: 10px;
-  backface-visibility: hidden;
-  color: aliceblue;
-  transform: rotateY(180deg);
-}
-
-.front {
-  transform: rotateY(180deg);
-  padding: auto;
-}
-.card-front img {
-  max-width: 548px;
-  border: 2px solid #7142cb;
-  border-radius: 10px;
-  height: 306.5px;
-  object-fit: cover;
-  backface-visibility: hidden;
-  transform-style: preserve-3d;
-}
-.content h2 {
-  text-align: left;
-  padding: 10px;
-  margin-bottom: 30px;
-}
-.content {
-  display: flex;
-  flex-direction: column;
-  padding: 25px;
-}
-.tec {
-  height: auto;
+.flip-card-container {
+  position: relative;
   width: 100%;
-  padding: 30px 0;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
   display: flex;
-  justify-content: space-around;
-}
-.tec i {
-  padding: 4px 20px;
-  cursor: pointer;
-  border: 2px solid #7142cb;
-}
-.tec i:hover {
-  transition: all 0.5s ease-in-out;
-  background-color: #7142cb;
-  color: aliceblue;
+  justify-content: center;
+  align-items: center;
 }
 
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border: 2px solid #7142cb;
+  border-radius: 8px;
+}
+.flip-card-front img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+
+  object-fit: cover;
+}
+
+.flip-card-front {
+  background-color: #641e1e;
+}
+
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
+.flip-card.flipped .flip-card-container {
+  transform: rotateY(180deg);
+}
+.content-card-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.content-card-back h3 {
+  padding: 10px;
+}
+
+.content-card-back p {
+  text-align: justify;
+  padding: 10px;
+  margin: 5px;
+}
+.content-tec {
+  width: 90%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.content-tec h5 {
+  font-weight: bold;
+}
+.content-tec i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 30px;
+  cursor: default;
+  font-size: 14px;
+  border-radius: 5px;
+  border: 1px solid #7142cb;
+}
+
+.content-tec i:hover {
+  background-color: #7142cb;
+  transition: all ease-in-out 0.6s;
+}
+@media (max-width: 768px) {
+  .flip-card {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 80%;
+  }
+  .flip-card-container {
+    width: auto;
+  }
+  .flip-card-front,
+  .flip-card-back {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .flip-card-front img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+  }
+
+  .content-card-back {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+  }
+  .content-card-back h3 {
+    padding: 1px;
+    margin: -10px;
+  }
+  .content-card-back p {
+    padding: 3px;
+    margin: 8px;
+  }
+  .content-tec i {
+    font-size: 10px;
+    font-weight: bold;
+    padding: 6px;
+  }
+}
