--- a/portfolio/src/pages/Projects/styles.css
+++ b/portfolio/src/pages/Projects/styles.css
@@ -1,7 +1,6 @@
 .container-projeto {
   height: 100vh;
   width: 100%;
-  position: relative;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -9,10 +8,35 @@
   align-items: center;
   font-family: "Roboto", sans-serif;
 }
-
-.container-card {
+.container-projeto h1{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 60px;
+  padding: 20px;
+  text-align: center;
+  font-weight: bold;
+  
+}
+
+.container-card {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
   flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  .container-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    flex-direction: column;
+  }
 }
