--- a/portfolio/src/pages/Home/styles.css
+++ b/portfolio/src/pages/Home/styles.css
@@ -185,14 +185,11 @@
   color: #fff;
   background-color: #7142cb;
 }
-.btn-cv svg {
-  font-size: 30px;
-}
+
 
 @media only screen and (max-width: 768px) {
   .container-home {
     
-
   }
   .container-left h1 {
     font-size: 30px;
@@ -226,16 +223,12 @@
   .container-right-info span{
     font-size: 13px;
   }
-  .btn-cv{
+  .btn-cv a{
     display: flex;
     justify-content: center;
     align-items: center;
 
-  }
-  .btn-cv svg {
-    text-align: center;
-    font-size: 15 px;
-  }
+  } 
   .social {
     display: flex;
     align-items: center;
