--- a/portfolio/src/pages/Projects/styles.css
+++ b/portfolio/src/pages/Projects/styles.css
@@ -8,7 +8,7 @@
   align-items: center;
   font-family: "Roboto", sans-serif;
 }
-.container-projeto h1{
+.container-projeto h1 {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,6 @@
   padding: 20px;
   text-align: center;
   font-weight: bold;
-  
 }
 
 .container-card {
@@ -37,6 +36,8 @@
     height: 100%;
     width: 100%;
     text-align: center;
+    gap: 20px;
     flex-direction: column;
+    padding-bottom: 30px;
   }
 }
