--- a/portfolio/src/pages/About/styles.css
+++ b/portfolio/src/pages/About/styles.css
@@ -9,7 +9,6 @@
   flex-direction: column;
 }
 
-
 .container-center {
   color: aliceblue;
   border: 2px solid #7142cb;
@@ -49,7 +48,7 @@
 
 .container-skill {
   display: flex;
-  margin-top: 18px;
+  margin: 10px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -100,7 +99,7 @@
     padding: 0;
     border: none;
   }
-  .container-center h1{
+  .container-center h1 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -110,12 +109,14 @@
     font-size: 13px;
     font-weight: bold;
     text-align: justify;
-    padding: 22px 25px;
+    padding: 0;
+    margin: 0;
   }
   .container-skill {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding-bottom: 60px;
   }
   .container-skill ul {
     display: flex;
