--- a/portfolio/src/pages/Home/styles.css
+++ b/portfolio/src/pages/Home/styles.css
@@ -185,22 +185,26 @@
   color: #fff;
   background-color: #7142cb;
 }
+.btn-cv{
+  padding-bottom:10px ;
+}
 
 
 @media only screen and (max-width: 768px) {
-  .container-home {
-    
-  }
+  
   .container-left h1 {
     font-size: 30px;
+    margin-top: -60px;
   }
   .container-left p {
     font-size: 14px;
   }
    .container-greeting {
-    text-align: center;
-    font-size: 18px;
-    margin-top: -80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    margin-top: -150px;
   }
   .container-left,
   .container-right {
@@ -212,7 +216,7 @@
     flex-basis: 100%;
   }
   .container-right{
-    margin-top: -100px;
+    margin-top: -200px;
   }
   .container-right img {
     margin: 0;
