--- a/portfolio/src/components/Card/styles.css
+++ b/portfolio/src/components/Card/styles.css
@@ -46,9 +46,7 @@
   object-fit: cover;
 }
 
-.flip-card-front {
-  background-color: #641e1e;
-}
+
 
 .flip-card-back {
   transform: rotateY(180deg);
@@ -100,7 +98,7 @@
   background-color: #7142cb;
   transition: all ease-in-out 0.6s;
 }
-@media screen and (max-width: 600px){
+@media screen and (max-width: 600px) {
   .flip-card {
     display: flex;
     justify-content: center;
@@ -124,23 +122,27 @@
 
   .content-card-back {
     width: 100%;
+    height: 80%;
     display: flex;
-    margin: 0;
     justify-content: center;
     align-items: center;
-    font-size: 12px;
+    font-size: 11px;
+    
   }
   .content-card-back h3 {
     padding: 1px;
     margin: -10px;
   }
   .content-card-back p {
-    padding: 3px;
+    padding: 0px;
     margin: 8px;
+  }
+  .content-tec {
+    gap: 10px;
   }
   .content-tec i {
     font-size: 10px;
     font-weight: bold;
-    padding: 6px;
+    padding: 5px;
   }
 }
