--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -9,6 +9,7 @@
 
 body {
   background: #090e16;
-  width: 100%;
-  height: 100vh;
+  max-width: 100%;
+  min-width: 350px;
+  overflow-x: hidden;
 }
