--- a/portfolio/src/pages/Home/styles.css
+++ b/portfolio/src/pages/Home/styles.css
@@ -1,32 +1,40 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
-
 .container-home {
-  height: 100vh;
-  padding: 10px 10px;
-  margin: 10px;
+  font-family: "Poppins", sans-serif;
+  max-width: 100%;
+  min-width: 350px;
+  height: 90vh;
+  margin: 0 auto;
+  padding-top: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  padding: 100px;
+  justify-content: center;
+}
+
+.container-greeting {
+  position: absolute;
+  top: 100px;
+  color: #7142cb;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
-}
-
-.container-left,
-.container-right {
-  flex-basis: 40%; /* cada seção ocupa 50% da largura do container */
-  box-sizing: border-box; /* inclui o padding na largura do elemento */
-}
-.container-greeting {
-  margin-bottom: 100px;
-  font-size: 30px;
-  font-weight: 500;
-  font-family: "Poppins", sans-serif;
-  color: #7142cb;
-  display: inline-block;
   animation-name: transition;
   animation-duration: 10s;
   animation-iteration-count: infinite;
 }
-
+.container-greeting img {
+  max-width: 40px;
+}
+.container-greeting p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  font-size: 32px;
+}
 @keyframes transition {
   0% {
     opacity: 1;
@@ -44,15 +52,18 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 70%;
-  width: auto;
-  padding: 25px;
 }
+
 .container-left h1 {
+  margin: 0 auto;
   color: #ffff;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
-  font-size: 50px;
+  font-size: 45px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   animation: moveInRight 1s ease-in-out forwards;
 }
 /*animation*/
@@ -66,46 +77,24 @@
     opacity: 1;
   }
 }
-.container-left h2 {
-  color: #ffff;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  font-size: 23px;
-  overflow: hidden; /* esconde as letras que ainda não foram exibidas */
-  white-space: nowrap; /* impede que a palavra quebre em várias linhas */
-  animation: typing 2s steps(11);
-}
-@keyframes typing {
-  from {
-    width: 0%; /* começa sem largura (sem letras visíveis) */
-  }
-  to {
-    width: 40%; /* termina com largura total (todas as letras visíveis) */
-  }
-}
 .container-left p {
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 18px;
-  line-height: 23px;
   display: flex;
-  align-items: center;
-  text-align: justify;
-  color: rgba(255, 255, 255, 0.5);
+  justify-content: center;
+  margin: 0 auto;
+  color: #ffffff80;
+  font-size: 1.2em;
   animation: moveInRight 1s ease-in-out forwards;
 }
 .social {
-  margin-top: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
+  gap: 20px;
   opacity: 0;
+  margin-top: 15px;
   animation: moveInTop 2s ease-in-out forwards;
 }
 .social a {
   color: #999;
-  margin-left: 30px;
   cursor: pointer;
   transition: all ease 0.3s;
 }
@@ -122,14 +111,25 @@
   }
 }
 
+.container-left,
 .container-right {
-  height: 70%;
-  width: 800px;
+  height: 100%;
+  width: 100%;
+}
+
+.container-right {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   flex-direction: row;
   animation: moveInLeft 1s ease-in-out forwards;
+}
+.container-right img {
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  margin: auto;
+  max-width: 420px;
 }
 /*animation*/
 @keyframes moveInLeft {
@@ -142,16 +142,12 @@
     opacity: 1;
   }
 }
-
-.container-right img {
-  margin-left: -50px;
-  width: 400px;
-  height: 400px;
-}
 .container-right-info {
   color: #fff;
   font-family: "Poppins", sans-serif;
   font-size: 10px;
+  padding: 10px;
+  margin-left: -20px;
 }
 .container-right-info a {
   display: flex;
@@ -168,82 +164,132 @@
   align-items: center;
   justify-content: center;
 }
-.container-right-info .btn-cv a {
+
+.btn-cv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-cv a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  border: 1px solid #7142cb;
+  border-radius: 10px;
+  color: #7142cb;
+  text-decoration: none;
+  text-align: center;
+  transition: all ease-in-out 0.4s;
+}
+.btn-cv svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  border: 1px solid #7142cb;
-  border-radius: 8px;
-  text-decoration: none;
-  width: 40%;
-  height: 40px;
-  margin-top: 50px;
-  transition: all ease-in-out 0.3s;
 }
-.container-right-info .btn-cv a:hover {
-  color: #fff;
+.btn-cv a:hover {
   background-color: #7142cb;
+  color: #fff;
 }
-.btn-cv{
-  padding-bottom:10px ;
-}
-
-
-@media only screen and (max-width: 768px) {
-  
-  .container-left h1 {
-    font-size: 30px;
-    margin-top: -60px;
-  }
-  .container-left p {
-    font-size: 14px;
-  }
-   .container-greeting {
+@media only screen and (max-width: 1000px) {
+  .container-home {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    margin-top: -150px;
+    flex-direction: column;
+    padding: 10px;
+    margin: 0 auto;
   }
+  .container-home img {
+    max-width: 250px;
+  }
+  .container-greeting {
+    display: flex;
+    font-size: 14px;
+    position: static;
+    margin: 0 auto;
+    padding: 0 auto;
+    margin-top: 30px;
+  }
+  .container-greeting img {
+    max-width: 20px;
+  }
+  .container-greeting p {
+    font-size: 15px;
+    padding-top: 50px;
+  }
+
+  .container-left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container-left h1 {
+    font-size: 1.4em;
+  }
+
+  .container-left p {
+    font-size: 0.9em;
+  }
+  .social {
+    gap: 10px;
+  }
+
   .container-left,
   .container-right {
+    height: 100%;
+  }
+
+  .container-right {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
-    flex-basis: 100%;
-  }
-  .container-right{
-    margin-top: -200px;
-  }
-  .container-right img {
-    margin: 0;
-    width: 300px;
-    height: 300px;
   }
 
-  .container-right-info span{
+  .container-right-info a {
     font-size: 13px;
   }
-  .btn-cv a{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
 
-  } 
-  .social {
+@media (min-width: 1380px) {
+  .container-home {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 10px;
+    margin: 0 auto;
+    padding: auto;
   }
-  .social a {
+
+  .container-greeting img {
+    max-width: 50px;
+  }
+  .container-greeting p {
+    font-size: 35px;
+  }
+
+  .container-left {
     display: flex;
     align-items: center;
-    margin: 0;
-    padding: 0px 15px;
+    justify-content: center;
   }
-  
+
+  .container-left h1 {
+    font-size: 3.2em;
+  }
+
+  .container-left p {
+    font-size: 1.5em;
+  }
+
+  .container-left,
+  .container-right {
+    height: 90%;
+    width: 60%;
+    padding: 10px;
+  }
+
+  .container-right img {
+    max-width: 500px;
+  }
+  .container-right-info a {
+    font-size: 18px;
+  }
 }
