--- a/portfolio/src/pages/Projects/styles.css
+++ b/portfolio/src/pages/Projects/styles.css
@@ -27,17 +27,49 @@
   align-items: center;
   flex-direction: row;
 }
+footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 2%;
+}
 
 @media (max-width: 768px) {
-  .container-card {
+  .container-projeto {
+    height: 120vh;
+    width: 100%;
+    padding: 10px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .container-projeto h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    width: 100%;
     text-align: center;
-    gap: 20px;
     flex-direction: column;
-    padding-bottom: 30px;
+    margin: 10% 0;
+  }
+  .container-projeto p{
+    margin: 0 auto;
+  }
+
+  .container-card {
+    height: 81%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+   
+  }
+  footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5%;
+    padding: 5%;
+    font-size: 12px;
   }
 }
